--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-  - destination: /opt/
+    destination: /opt/
 hooks:
   BeforeInstall:
     - location: buildApp.sh
