--- a/appspec.yml
+++ b/appspec.yml
@@ -3,3 +3,6 @@ os: linux
 files:
   - source: /
     destination: /opt/app/
+BeforeInstall:
+  - run: echo teste >> /root/teste.txt
+    runas: root
