--- a/appspec.yml
+++ b/appspec.yml
@@ -10,3 +10,6 @@ hooks:
   AfterInstall:
     - location: scripts/installServices.sh
       runas: root
+  ApplicationStart:
+    - location: scripts/startAPI.sh
+      runas: root
